versioned_docs/version-1.18.x/wiki/skyblock-builder/packdev/config/world.md
---
description: Shape the world
---

# World

## Island Distance
Specifies the distance between two islands. If `the_nether` is selected as the [start dimension](spawn.mdx#dimension),
this distance is divided by 8.

## Offset
Determines the offset from coordinates (0, 0) for island generation. This can be utilized to generate islands centrally
within .mca files.

## Sea Height
Sets the sea level in the world. Note that this does not affect the water height within the world but does influence
spawn heights for entities like squids.

## Surface
Configures the block settings for generating surfaces across different dimensions. Follows a format similar
to [flat world generation settings 🔗](https://minecraft.fandom.com/wiki/Superflat#Preset_code_format), but ignores the
biome setting. These settings can be applied to each dimension. To generate a completely void space, set the dimension
to an empty string instead of removing it from the list. If surface generation is disabled, these settings are ignored.

## Biomes
This is a map that provides [ResourceLists 🔗](https://moddingx.org/libx/org/moddingx/libx/util/data/ResourceList.html#use_resource_lists_in_configs).

By default, all biomes are allowed. You can block specific biomes by adding them to the list. To only allow biomes from the list, set `allow_list` to `true`.

:::info
Each dimension must have at least one valid biome!
:::

You can find a complete list of all possible structures in `config/skyblockbuilder/data/biomes.txt`.

:::warning
Some structures require specific biomes to generate (e.g., Mansions require Dark Oak Forest). These
structures will not be generated if you do not have these biomes.
:::
